Fix issues with background contrast - accessibility dev tools

--- a/css/button.css
+++ b/css/button.css
@@ -27,7 +27,7 @@
 .btn-ligth {
   border: none;
   font: normal 500 16px "Poppins", sans-serif;
-  color: #7f8cff;
+  color: #396df2;
   cursor: pointer;
   padding: 0;
   margin-top: 12px;
