--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,7 @@
   width: 76px;
   height: 20px;
   margin-left: 24px;
-  color: #6070ff;
+  color: #6620fd;
   font: normal 700 18px 'Poppins', sans-serif;
   text-decoration: none;
   display: flex;
